# warden-secret-operator

./: .dockerignore  Cargo.toml  Dockerfile  README.md  bitwardensecrets.tomjo.net.yaml
.github/: renovate.json
.github/workflows/: build.yaml  determine_version.yaml  pr.yaml
deploy/crd/: bitwardensecrets.tomjo.net.yaml  wardensecrets.tomjo.net.yaml
deploy/manifests/: README.md  bitwarden-operator.configmap.yaml  bitwarden-operator.deployment.yaml  bitwarden-operator.sa.yaml  bitwarden-operator.service.yaml
src/: bw.rs  conversion.rs  crd.rs  main.rs
src/crd/: mod.rs  v1.rs  v2.rs
tests/: tests.rs
