[package]
name = "warden-secret-operator"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
env_logger = "0.11.1"

tokio = { version = "1.36", features = [
    "macros",
    "rt-multi-thread",
] } # Macros for easy project setup and testing, multi-threaded runtime for best utilization of resources
kube = { version = "0.88", default-features = true, features = [
    "derive",
    "runtime",
] } # Library for talking to Kubernetes API
k8s-openapi = { version = "0.21", default-features = false, features = [
    "v1_25",
] } # Kube-rs depends on k8s-openapi
futures = "0.3"
# All serde dependencies are used to serialize/deserialize CRDs and other Kubernetes-related structs
serde = { version = "1.0.200", features = ["derive"]}
serde_json = "1.0.116"
schemars = "0.8"
thiserror = "1"    # Custom Error definitions and convenient error mappings
config = "0.14"
secstr = "0.5.1"
const_format = "0.2.32"
shell-escape = "0.1.5"
tempfile = "3.10"
warp = { version = "0.3", features = ["tls"]}
tracing-subscriber = "0.3"
openssl = { version = "0.10", features = ["vendored"]}

ahash = "0.8.8" # https://github.com/tkaitchuck/aHash/issues/200 Can be removed when kube-runtime uses the newer version
[dev-dependencies]
